--- a/WeekendRayTracer/WeekendRayTracer.csproj
+++ b/WeekendRayTracer/WeekendRayTracer.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
